--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,4 +1,4 @@
- <html lang="en">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,13 +9,32 @@
 </head>
 <body>
 <div class="chat-container">
-    <div class="header">Chit Chat Box</div>
+    <div class="header">
+        Chit Chat Box
+        <button class="theme-toggle" id="theme-toggle" onclick="toggleTheme()">&#x1F31E;</button> <!-- Sun icon -->
+    </div>
     <div class="chat-box" id="messages"></div>
     <div class="input-box">
         <input type="text" class="message" id="message" placeholder="Type a message">
         <button class="send" onclick="sendMessage()">Send</button>
     </div>
 </div>
+<script>
+    function toggleTheme() {
+        document.body.classList.toggle('dark');
+        document.querySelector('.chat-container').classList.toggle('dark');
+        document.querySelector('.header').classList.toggle('dark');
+        document.querySelector('.chat-box').classList.toggle('dark');
+        document.querySelector('input[type="text"]').classList.toggle('dark');
+        document.querySelector('button.send').classList.toggle('dark');
+        const themeToggle = document.getElementById('theme-toggle');
+        if (document.body.classList.contains('dark')) {
+            themeToggle.innerHTML = '&#x1F319;';
+        } else {
+            themeToggle.innerHTML = '&#x1F31E;';
+        }
+    }
+</script>
 <script src="script.js"></script>
 </body>
 </html>
