--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,34 +10,24 @@
 </head>
 <body>
 <div class="chat-container">
-    <div class="header">
-        Chit Chat Box
-        <button class="theme-toggle" id="theme-toggle" onclick="toggleTheme()">&#x1F31E;</button> <!-- Sun icon -->
-    </div>
+    <div class="header">Chit Chat Box</div>
     <div class="chat-box" id="messages"></div>
     <div class="input-box">
-        <input type="text" class="message" id="message" placeholder="Type a message">
-        <button class="send" onclick="sendMessage()">Send</button>
+        <button class="share" onclick="chooseFile()">
+            <img src="assests\file.png" alt="Share" class="file-icon">
+        </button>
+        <input type="file" id="fileInput" style="display: none;">
+        <input type="text" class="message" id="message" placeholder="Type a message" aria-label="Type a message">
+        <button class="send" onclick="sendMessage()">
+            <img src="assests\send.png"  alt="Send" class="send-icon">
+        </button>
     </div>
 </div>
+<script src="script.js"></script>
 <script>
-    function toggleTheme() {
-        document.body.classList.toggle('dark');
-        document.querySelector('.chat-container').classList.toggle('dark');
-        document.querySelector('.header').classList.toggle('dark');
-        document.querySelector('.chat-box').classList.toggle('dark');
-        document.querySelector('input[type="text"]').classList.toggle('dark');
-        document.querySelector('button.send').classList.toggle('dark');
-        
-        const themeToggle = document.getElementById('theme-toggle');
-        if (document.body.classList.contains('dark')) {
-            themeToggle.innerHTML = '&#x1F319;'; // Moon icon
-        } else {
-            themeToggle.innerHTML = '&#x1F31E;'; // Sun icon
-        }
+    function chooseFile() {
+        document.getElementById('fileInput').click();
     }
 </script>
-
-<script src="script.js"></script>
 </body>
 </html>
