--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,10 +15,23 @@
       <div class="header">
         Chit Chat Box
         <button class="theme-toggle" id="theme-toggle" onclick="toggleTheme()">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-moon">
-                <path d="M21 12.79A9 9 0 1 1 12.21 3 7 7 0 0 0 21 12.79z" />
-              </svg>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="feather feather-moon"
+          >
+            <path d="M21 12.79A9 9 0 1 1 12.21 3 7 7 0 0 0 21 12.79z" />
+          </svg>
         </button>
+        <!-- Add a Logout button in the header -->
+        <a href="/logout" class="logout-button">Logout</a>
       </div>
       <div class="chat-box" id="messages"></div>
       <div class="input-box">
@@ -31,8 +44,6 @@
         <button class="send" onclick="sendMessage()">Send</button>
       </div>
     </div>
-
-      
 
     <script src="script.js"></script>
   </body>
