--- a/frontend/index.html
+++ b/frontend/index.html
@@ -41,7 +41,24 @@
           id="message"
           placeholder="Type a message"
         />
-        <button class="send" onclick="sendMessage()">Send</button>
+        <button class="send" onclick="sendMessage()">
+          <!-- Send icon (SVG) -->
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            width="24"
+            height="24"
+            viewBox="0 0 24 24"
+            fill="none"
+            stroke="currentColor"
+            stroke-width="2"
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            class="feather feather-send"
+          >
+            <line x1="22" y1="2" x2="11" y2="13"></line>
+            <polygon points="22 2 15 22 11 13 2 9 22 2"></polygon>
+          </svg>
+        </button>
       </div>
     </div>
 
