--- a/frontend/index.html
+++ b/frontend/index.html
@@ -61,7 +61,59 @@
         </button>
       </div>
     </div>
-
+    <footer>
+      <div class="footer-container">
+        <div class="footer-content">
+          <div class="footer-logo">
+            <h3>ChitChat</h3>
+          </div>
+          <div class="footer-columns">
+            <div class="footer-column">
+              <h4>Links</h4>
+              <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">About Us</a></li>
+              </ul>
+            </div>
+            <div class="footer-column">
+              <h4>Features</h4>
+              <ul>
+                <li><a href="#">Real-time Messaging</a></li>
+                <li><a href="#">Dark Mode</a></li>
+                <li><a href="#">Group Chats</a></li>
+              </ul>
+            </div>
+            <div class="footer-column">
+              <h4>Support</h4>
+              <ul>
+                <li><a href="#">FAQ</a></li>
+                <li><a href="#">Help Center</a></li>
+                <li><a href="#">Privacy Policy</a></li>
+              </ul>
+            </div>
+            <div class="footer-column">
+              <h4>Contact</h4>
+              <ul>
+                <li><a href="#">+91 88xxxxxxxx</a></li>
+                <li><a href="#">example@chitchat.com</a></li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="footer-bottom">
+          <div class="social-icons">
+            <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
+            <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+            <a href="#" aria-label="LinkedIn"><i class="fab fa-linkedin"></i></a>
+          </div>
+          <p>Copyright ©️ 2024 chitchat.com</p>
+          <p>Made with <span class="heart">♥️</span> by ChitChat Team</p>
+        </div>
+      </div>
+    </footer>
+    
     <script src="script.js"></script>
   </body>
 </html>
